<resources xmlns:tools="http://schemas.android.com/tools" xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2" tools:ignore="MissingTranslation">
    <string name="app_name" translatable="false">Fenrir VK</string>
    <string-array name="array_language_names">
        <item>Default</item>
        <item>English</item>
        <item>Russian</item>
    </string-array>
    <string-array name="array_language_items" translatable="false">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string-array name="array_parser_names" translatable="false">
        <item>Json</item>
        <item>MessagePack</item>
    </string-array>
    <string-array name="array_parser_items" translatable="false">
        <item>0</item>
        <item>1</item>
    </string-array>
    <string-array name="array_rendering_mode_names">
        <item>Software</item>
        <item>Hardware enabled</item>
        <item>Force Hardware</item>
    </string-array>
    <string-array name="array_rendering_mode_items" translatable="false">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string-array name="array_end_list_anim_names">
        <item>Success</item>
        <item>Balls</item>
        <item>Wave</item>
    </string-array>
    <string-array name="array_end_list_anim_items" translatable="false">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string-array name="array_limit_cache_images_names" translatable="false">
        <item>5%</item>
        <item>10%</item>
        <item>15%</item>
        <item>128 MB</item>
        <item>256 MB</item>
        <item>512 MB</item>
        <item>1 GB</item>
    </string-array>
    <string-array name="array_limit_cache_images_items" translatable="false">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>128</item>
        <item>256</item>
        <item>512</item>
        <item>1024</item>
    </string-array>
    <string-array name="array_chat_background_names">
        <item>Monotone</item>
        <item>Cookies</item>
        <item>Lines</item>
        <item>Runes</item>
        <item>Custom…</item>
    </string-array>
    <string-array name="array_chat_background_items" translatable="false">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
    <string-array name="array_lifecycle_names">
        <item>1 min.</item>
        <item>2 min.</item>
        <item>5 min.</item>
        <item>10 min.</item>
        <item>15 min.</item>
    </string-array>
    <string-array name="array_lifecycle_items" translatable="false">
        <item>60000</item>
        <item>120000</item>
        <item>300000</item>
        <item>600000</item>
        <item>900000</item>
    </string-array>
    <string-array name="array_ffmpeg_names">
        <item>Off</item>
        <item>Enabled</item>
        <item>Primary</item>
    </string-array>
    <string-array name="array_ffmpeg_items" translatable="false">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string-array name="preview_preview_size" translatable="false">
        <item>S: 75 px</item>
        <item>M: 130 px</item>
        <item>X: 604 px</item>
        <item>Y: 807 px</item>
        <item>Z: 1280 px</item>
        <item>W: 2560 px</item>
    </string-array>
    <string-array name="preview_preview_size_values" translatable="false">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>
    <string-array name="picasso_dispatcher_names" translatable="false">
        <item>Handler</item>
        <item>Coroutine</item>
    </string-array>
    <string-array name="picasso_dispatcher_values" translatable="false">
        <item>0</item>
        <item>1</item>
    </string-array>
    <string-array name="array_photo_rounded_names">
        <item>Always rounded</item>
        <item>Rounded if one photo</item>
        <item>Not rounded</item>
    </string-array>
    <string-array name="array_photo_rounded_items" translatable="false">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string-array name="array_news_start_updates_names">
        <item>Disable</item>
        <item>Update</item>
        <item>Ask</item>
    </string-array>
    <string-array name="array_news_start_updates_items" translatable="false">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string-array name="array_swipes_chats_names">
        <item>Disable</item>
        <item>Slidr</item>
    </string-array>
    <string-array name="array_swipes_chats_items" translatable="false">
        <item>0</item>
        <item>1</item>
    </string-array>
    <string-array name="array_donate_anim_names">
        <item>Disable</item>
        <item>Lines</item>
        <item>Fire Ring</item>
    </string-array>
    <string-array name="array_donate_anim_items" translatable="false">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string-array name="array_is_open_url_internal_names">
        <item>Disable</item>
        <item>Only VK</item>
        <item>All Url</item>
    </string-array>
    <string-array name="array_is_open_url_internal_items" translatable="false">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string-array name="array_pager_transform_names" translatable="false">
        <item>Off</item>
        <item>Depth Transformer</item>
        <item>Zoom Out Transformer</item>
        <item>Clock Spin Transformer</item>
        <item>Background To Foreground Transformer</item>
        <item>Cube In Depth Transformer</item>
        <item>Fan Transformer</item>
        <item>Gate Transformer</item>
        <item>Slider Transformer</item>
    </string-array>
    <string-array name="array_pager_transform_anim_items" translatable="false">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
    </string-array>
    <string-array name="array_accounts_input">
        <item>VK Android</item>
        <item>Kate</item>
        <item>Hidden VK Android</item>
        <item>Hidden Kate</item>
        <item>Hidden IOS</item>
    </string-array>
    <string-array name="array_sex">
        <item>Female</item>
        <item>Male</item>
    </string-array>
    <string-array name="array_month_items">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
    <string-array name="player_progress_state" translatable="false">
        <item> ••••••</item>
        <item>• •••••</item>
        <item>•• ••••</item>
        <item>••• •••</item>
        <item>•••• ••</item>
        <item>••••• •</item>
        <item>•••••• </item>
    </string-array>
    <string name="crash_error_activity_error_occurred_explanation">Unhandled exception.</string>
    <string name="crash_error_activity_restart_app">Restart</string>
    <string name="crash_error_activity_error_details">Details</string>
    <string name="crash_error_activity_error_details_title">Exception details</string>
    <string name="crash_error_activity_error_details_close">Close</string>
    <string name="crash_error_activity_error_details_copy">Copy</string>
    <string name="crash_error_activity_error_details_copied">Copied</string>
    <string name="crash_error_activity_error_details_clipboard_label">Error information</string>
    <string name="crash_error_activity_out_of_memory">Out of memory!</string>
    <string name="dialogs">Dialogs</string>
    <string name="dialog_day_today">Today</string>
    <string name="dialog_day_yesterday">Yesterday</string>
    <string name="dialog_day_ten_days">For 10 days</string>
    <string name="dialog_pinned">Pinned</string>
    <string name="dialog_day_older">Old</string>
    <string name="dialog_me">I</string>
    <string name="attachments">[attachments]</string>
    <string name="sticker_message">[sticker]</string>
    <string name="voice_message">[audio message]</string>
    <string name="audio_message">[audio]</string>
    <string name="call_message">[call]</string>
    <string name="doc_message">[document]</string>
    <string name="gift_message">[gift]</string>
    <string name="graffiti_message">[graffiti]</string>
    <string name="photo_message">[photo]</string>
    <string name="video_message">[video]</string>
    <string name="wall_message">[repost]</string>
    <string name="forward_messages">[forwarded]</string>
    <string name="forward_messages_view">FORWARDED</string>
    <string name="service_message">[service]</string>
    <string name="title_messages">Messages</string>
    <string name="settings">Settings</string>
    <string name="general_settings">Commons</string>
    <string name="about_settings">About application</string>
    <string name="account_cache_cleaner">Clear cache and sql</string>
    <string name="ask_account_cache_cleaner">Do clear cache and sql?</string>
    <string name="cache_cleaner">Clear cache</string>
    <string name="go_to_dialog">To dialog</string>
    <string name="send">Send</string>
    <string name="text_hint">Message</string>
    <string name="search_hint">Find</string>
    <string name="sending">Sending</string>
    <string name="in_order">In queue</string>
    <string name="error">Error</string>
    <string name="friends">Friends</string>
    <string name="sending_message_failed">Message sending failed</string>
    <string name="try_again">Repeat</string>
    <string name="delete">Delete</string>
    <string name="delete_from_playlist">Remove from playlist</string>
    <string name="select_attachments">Select attachments</string>
    <string name="attachment_wall_post">Recording</string>
    <string name="attachment_document">Document</string>
    <string name="attachment_documents">Documents</string>
    <string name="attachment_link">Link</string>
    <string name="user_type_message">typing message</string>
    <string name="user_type_voice">typing voice</string>
    <string name="many_users_typed">%1$s and %2$d</string>
    <string name="load_more">Load more</string>
    <string name="last_seen_sex_man">was: %1$s</string>
    <string name="last_seen_sex_woman">was: %1$s</string>
    <string name="last_seen_sex_unknown">was: %1$s</string>
    <string name="online">Online</string>
    <string name="offline">Offline</string>
    <string name="offline_hidden">Offline: hidden</string>
    <string name="notif_setting_title">Notifications</string>
    <string name="create_pin_code_title">Create a PIN</string>
    <string name="ask_for_pin_on_application_start_title">PIN-code at start</string>
    <string name="delayed_pin_for_entrance_title">Don\'t ask every time</string>
    <string name="button_proxy">Proxy</string>
    <string name="button_settings">Settings</string>
    <string name="allow_fingerprint_title">Allow fingerprint</string>
    <string name="import_accounts">Import settings</string>
    <string name="export_accounts">Export settings</string>
    <string name="entry_account">Enter</string>
    <string name="rotating_player_cover">Rotate player cover</string>
    <string name="invert_rotating">Invert rotating</string>
    <string name="fade_saturation">Fade saturation</string>
    <string name="pin_digit">pin digit</string>
    <string name="exchange_token">Exchange Token</string>
</resources>