<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/auth_by_qr"
        android:icon="@drawable/qr_code"
        android:title="@string/auth_by_qr"
        app:iconTint="?colorOnSurface"
        app:showAsAction="always" />

    <item
        android:id="@+id/import_accounts"
        android:title="@string/import_accounts"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_proxy"
        android:title="@string/button_proxy" />

    <item
        android:id="@+id/action_preferences"
        android:title="@string/button_settings" />

    <item
        android:id="@+id/export_accounts"
        android:title="@string/export_accounts" />

    <item
        android:id="@+id/import_by_exchange_token"
        android:title="@string/exchange_token" />

    <item
        android:id="@+id/entry_account"
        android:title="@string/entry_account" />

</menu>