<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="16dp"
    android:paddingTop="8dp"
    android:paddingEnd="16dp"
    android:paddingBottom="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/enabled_anim"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/rotating_player_cover"
            android:textAppearance="@style/TextAppearance.Material3.BodyLarge" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_rotation_speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.Material3.BodyLarge" />

        <com.google.android.material.slider.Slider
            android:id="@+id/edit_rotation_speed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:stepSize="1.0"
            android:value="3.0"
            android:valueFrom="0.0"
            android:valueTo="10.0"
            app:thumbHeight="24dp"
            app:trackHeight="8dp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_zoom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.Material3.BodyLarge" />

        <com.google.android.material.slider.Slider
            android:id="@+id/edit_zoom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:stepSize="1.0"
            android:value="4.0"
            android:valueFrom="0.0"
            android:valueTo="10.0"
            app:thumbHeight="24dp"
            app:trackHeight="8dp" />

        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/edit_invert_rotation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/invert_rotating"
            android:textAppearance="@style/TextAppearance.Material3.BodyLarge" />

        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/edit_fade_saturation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/fade_saturation"
            android:textAppearance="@style/TextAppearance.Material3.BodyLarge" />

        <include layout="@layout/line_divider" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_blur"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.Material3.BodyLarge" />

        <com.google.android.material.slider.Slider
            android:id="@+id/edit_blur"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:stepSize="1.0"
            android:value="16.0"
            android:valueFrom="0.0"
            android:valueTo="25.0"
            app:thumbHeight="24dp"
            app:trackHeight="8dp" />
    </LinearLayout>
</ScrollView>